added buttons section

--- a/index.html
+++ b/index.html
@@ -13,18 +13,27 @@
     <!-- header-nav -->
     <header>
         <div class="header-nav container d-flex">
-            <div class="left-nav black-border"></div>
-            <div class="center-nav black-border"></div>
-            <div class="right-nav black-border"></div>
+            <div class="left-nav black-border d-flex"> logo</div>
+            <div class="center-nav black-border">
+                <ul class="header-link d-flex">
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                    <li>link</li>
+                </ul>
+            </div>
+            <div class="right-nav black-border d-flex">login</div>
         </div>
-        <section class="buttons-section">
-            <div class="header-buttons">
+
+    </header>
+    <main>
+        <section class="buttons-section ">
+            <div class="header-buttons container">
 
             </div>
         </section>
-
-    </header>
-    <main></main>
+    </main>
     <footer></footer>
 
 
