--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
 
             </div>
         </section>
+
+        <section class="first-section container">
+            <div class="server-section d-flex">
+                <div class="image-left"></div>
+                <div class="text-right"></div>
+            </div>
+
+        </section>
     </main>
     <footer></footer>
 
