added second section

--- a/index.html
+++ b/index.html
@@ -27,20 +27,30 @@
         </div>
 
     </header>
+    <!-- buttons-section -->
     <main>
         <section class="buttons-section ">
             <div class="header-buttons container">
 
             </div>
         </section>
-
-        <section class="first-section container">
-            <div class="server-section d-flex">
+        <!-- first-section -->
+        <section class="first-section ">
+            <div class="inside-section d-flex container">
                 <div class="image-left"></div>
                 <div class="text-right"></div>
             </div>
-
         </section>
+        <!-- second-section -->
+        <section class="second-section bg-grey">
+            <div class="inside-section d-flex container">
+                <div class="text-right"></div>
+                <div class="image-left"></div>
+            </div>
+        </section>
+        <!-- third-section -->
+
+
     </main>
     <footer></footer>
 
