--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
         </section>
         <!-- third-section -->
 
-
+        <section class="third-section ">
+            <div class="inside-section d-flex container">
+                <div class="image-left"></div>
+                <div class="text-right"></div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 
