--- a/index.html
+++ b/index.html
@@ -30,40 +30,55 @@
     <!-- buttons-section -->
     <main>
         <section class="buttons-section ">
-            <div class="header-buttons container">
+            <div class="header-buttons container black-border">
 
             </div>
         </section>
         <!-- first-section -->
         <section class="first-section ">
             <div class="inside-section d-flex container">
-                <div class="image-left"></div>
-                <div class="text-right"></div>
+                <div class="image-left black-border"></div>
+                <div class="text-right black-border"></div>
             </div>
         </section>
         <!-- second-section -->
         <section class="second-section bg-grey">
             <div class="inside-section d-flex container">
-                <div class="text-right"></div>
-                <div class="image-left"></div>
+                <div class="text-right black-border"></div>
+                <div class="image-left black-border"></div>
             </div>
         </section>
         <!-- third-section -->
 
         <section class="third-section ">
             <div class="inside-section d-flex container">
-                <div class="image-left"></div>
-                <div class="text-right"></div>
+                <div class="image-left black-border"></div>
+                <div class="text-right black-border"></div>
             </div>
         </section>
         <!-- fourth-section -->
         <section class="fourth-section bg-grey">
-            <div class="main-box container">
+            <div class="main-box container black-border">
 
             </div>
         </section>
     </main>
-    <footer></footer>
+    <!-- footer -->
+    <footer>
+        <div class="footer-nav container d-flex">
+            <div class="left-col black-border"></div>
+            <div class="right-col black-border"></div>
+            <div class="right-col black-border"></div>
+            <div class="right-col black-border"></div>
+            <div class="right-col black-border"></div>
+        </div>
+        <div class="footer-buttons">
+            <div class="footer-cont container d-flex">
+                <div class="footer-logo black-border bg-pink">logo</div>
+                <div class="footer-button black-border bg-pink">button</div>
+            </div>
+        </div>
+    </footer>
 
 
 </body>
